# bindiffmatch

./: .gitignore  README.md  pyproject.toml
binaryai_bindiffmatch/: __init__.py  bindiffmatch.py  main.py  metricsutils.py  models.py  utils.py
binaryai_bindiffmatch/similarity_matrix/: basic.py  lowmem.py
scripts/: diaphora-3.0-b91a9e7abe03de45bf47d4619eda7f8b3f0357bb.patch  metrics.py
